// Original file: proto_files/control_plane.proto


export interface GrpcControlPlane_CoaAccount {
  'id'?: (string);
  'ledgerAccountId'?: (string);
  'ownerId'?: (string);
  'state'?: (string);
  'type'?: (string);
  'currencyCode'?: (string);
  'currencyNum'?: (string);
  'currencyDecimals'?: (number);
}

export interface GrpcControlPlane_CoaAccount__Output {
  'id'?: (string);
  'ledgerAccountId'?: (string);
  'ownerId'?: (string);
  'state'?: (string);
  'type'?: (string);
  'currencyCode'?: (string);
  'currencyNum'?: (string);
  'currencyDecimals'?: (number);
}
